fixed few things on mobile look

--- a/mobile_and_tablets.css
+++ b/mobile_and_tablets.css
@@ -33,9 +33,9 @@ body {
     overflow-x: hidden;
 }
 
-.wrapper-desktop {
+/* .wrapper-desktop {
     display: none;
-}
+} */
 
 .panel-desktop {
     display: none;
@@ -95,8 +95,8 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    background-color: rgba(16, 201, 238, 0.573);
-    box-shadow: 0px 0px 5px 10vh rgba(16, 201, 238, 0.573);
+    background-color: rgb(0, 190, 228);
+    box-shadow: 0px 0px 5px 10vh rgb(0, 190, 228);
     /* background-image: linear-gradient(315deg, #2c7af8 0%, #09c6f9 74%); */
     z-index: 1;
     border-radius: 3%;
@@ -112,9 +112,17 @@ header {
     width: 80%;
     height: 35vh;
     margin-top: 3%;
-    margin-bottom: 6vh;
+    margin-bottom: 5vh;
+    padding-bottom: 0vh;
     font-family: 'Montserrat', sans-serif;
 }
+
+
+/* div.arrow-hint:nth-child(4) {
+    position: absolute;
+    top: 80%;
+    left: 50%;
+} */
 
 .info h1 {
     font-size: 2rem;
@@ -151,15 +159,15 @@ header {
 }
 
 .arrow-hint {
-    position: absolute;
+    position: relative;
     top: 1%;
     left: 50%;
     transform: translateX(-50%);
     border: 3px rgb(255, 194, 0) solid;
     box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.766);
     border-radius: 50%;
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     text-align: center;
     overflow: hidden;
 }
@@ -169,7 +177,7 @@ header {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 1.7rem;
+    font-size: 2rem;
     line-height: 3.4rem;
     align-items: center;
     text-align: center;
@@ -280,9 +288,9 @@ p {
 }
 
 .products-with-benefits .introduction h2>.arrow-hint {
-    margin-top: 50%;
-    width: 15vh;
-    height: 15vh;
+    margin-top: 60%;
+    width: 10vh;
+    height: 10vh;
     color: rgb(255, 194, 0);
     border: 8px rgb(255, 194, 0) solid;
     box-shadow: 0px 0px 6px 4px rgba(0, 0, 0, 0.766);
@@ -616,6 +624,7 @@ p {
     z-index: 5;
     /* height: 200vh; */
     background-color: #54d5f8;
+
     /* background-image: linear-gradient(315deg, #2c7af8 0%, #09c6f9 74%); */
 }
 
